<resources>
    <string name="app_name">Tip Calculator</string>
    <string name="bill_total">Bill Total:</string>
    <string name="tip_percent">Tip %:</string>
    <string name="custom">Custom:</string>
    <string name="tip">Tip:</string>
    <string name="total">Total:</string>
    <string name="split_by">Split By:</string>
    <string name="total_per_person">Total/Person:</string>
    <string name="clear">Clear</string>
    <string name="enter_total">Enter Bill Total</string>
    <string name="percent_10">10%</string>
    <string name="percent_15">15%</string>
    <string name="percent_18">18%</string>
    <string name="percent_custom">Custom</string>
    <string name="one_person">One</string>
    <string name="two_people">Two</string>
    <string name="three_people">Three</string>
    <string name="four_people">Four</string>
    <string name="custom_initial">40%</string>
    <string name="tip_initial">$0.0</string>
    <string name="total_initial">$0.0</string>
    <string name="per_person_initial">$0.0</string>
</resources>